# algebraic-real-article

./: .gitignore  LICENSE  PandocUtil.hs  README.md  algebraic-real-article.cabal  algebraic-real.cabal  index.html  site.hs  stack.yaml
css/: default.css
pdf/: compile.sh  main.tex  template.tex
posts/: 00-intro.md  01-polynomial.md  02-real-root-counting.md  03-arithmetic.md  04-prs.md
src/Numeric/AlgebraicReal/: AlgReal.hs  CReal.hs  Class.hs  Interval.hs  Resultant.hs  UniPoly.hs
src/Numeric/AlgebraicReal/Factor/: Berlekamp.hs  BigPrime.hs  CantorZassenhaus.hs  Kronecker.hs  SquareFree.hs
templates/: default.html  post-list.html  post.html
