name:               algebraic-real-article
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pandoc
                  , containers
                  , time
                  , time-locale-compat
                  , network-uri
  ghc-options:      -threaded -dynamic
  default-language: Haskell2010
