name:                algebraic-real
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://miz-ar.info/math/algebraic-real/
license:             BSD3
license-file:        LICENSE
author:              ARATA Mizuki
maintainer:          minorinoki@gmail.com
copyright:           2017 ARATA Mizuki
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.AlgebraicReal.UniPoly
                     , Numeric.AlgebraicReal.AlgReal
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/minoki/algebraic-real
